<resources>
    <string name="app_name">Appointment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">sign in</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_credit_card">Credit Card</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>


    <string name="prompt_flyingfrom">Symptoms</string>
    <string name="prompt_flyingto">To</string>
    <string name="prompt_departure_date">Appointment date</string>
    <string name="prompt_return_date">Return date</string>
    <string name="prompt_traveller">Select Traveller</string>
    <string name="prompt_class">Select class</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="alert_dialog_two_buttons_title">My Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sort">
        <item>Fare</item>
        <item>Travel time</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_specialization">Enter Specialization</string>
    <string name="server_ip">Server IP</string>
    <string name="ip_address">192.168.43.148:8084</string>
    <string name="register_hint">Don\'t have an account? Register</string>
    <string name="title_activity_my_test_booking">My Test Booking</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="morning">
        <item>Morning</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="afternoon">
        <item>Afternoon</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="evening">
        <item>Evening</item>
        <item>1</item>
        <item>0</item>
    </string-array>


</resources>
